--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,13 @@
 page-home {
+    .toolbar-content p {
+        margin-left: 10px;
+    }
+    
+  .back{
+background-color:#ECEFF1;
 
+  }  
+  .fon{
+    color: #000000;
+  }
 }
